--- a/MauiAppExample/MauiAppExample.csproj
+++ b/MauiAppExample/MauiAppExample.csproj
@@ -34,6 +34,7 @@
       <CreatePackage>false</CreatePackage>
       <CodesignKey>iPhone Developer</CodesignKey>
       <CodesignEntitlements>Platforms\iOS\Entitlements.plist</CodesignEntitlements>
+      <MtouchLink>None</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
       <CreatePackage>false</CreatePackage>
@@ -60,13 +61,14 @@
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+        <PackageReference Include="CommunityToolkit.Maui" Version="5.1.0" />
+        <PackageReference Include="CommunityToolkit.Maui.Core" Version="5.1.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Services\" />
       <Folder Include="Data\" />
       <Folder Include="Model\" />
-      <Folder Include="Shared\" />
       <Folder Include="Model\Auth\" />
       <Folder Include="Extensions\" />
     </ItemGroup>
@@ -95,7 +97,6 @@
       <None Remove="Services\" />
       <None Remove="Data\" />
       <None Remove="Model\" />
-      <None Remove="Shared\" />
       <None Remove="Model\Auth\" />
       <None Remove="Extensions\" />
     </ItemGroup>
