wip: almost done

--- a/MauiAppExample/MauiAppExample.csproj
+++ b/MauiAppExample/MauiAppExample.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
+        <TargetFrameworks>net7.0-ios</TargetFrameworks>
+        <!--;net7.0-maccatalyst-->
         <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>
         <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
         <!-- <TargetFrameworks>$(TargetFrameworks);net7.0-tizen</TargetFrameworks> -->
@@ -70,6 +71,7 @@
         <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
         <PackageReference Include="CommunityToolkit.Maui" Version="5.1.0" />
         <PackageReference Include="CommunityToolkit.Maui.Core" Version="5.1.0" />
+        <PackageReference Include="Markdig.Signed" Version="0.31.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -79,6 +81,7 @@
       <Folder Include="Model\Auth\" />
       <Folder Include="Extensions\" />
       <Folder Include="Resources\Images\" />
+      <Folder Include="Converters\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -112,6 +115,7 @@
       <None Remove="Resources\Images\LogoUniud.png" />
       <None Remove="Resources\Fonts\MaterialIcons-Regular.ttf" />
       <None Remove="Resources\Images\logo_uniud.png" />
+      <None Remove="Converters\" />
     </ItemGroup>
     <ItemGroup>
       <MauiImage Include="Resources\Images\logo_uniud.png" />
